fix(workout): Fix z-index with p-message

--- a/apps/app/src/app/navbar/workout/workout-session/workout-session.component.scss
+++ b/apps/app/src/app/navbar/workout/workout-session/workout-session.component.scss
@@ -4,7 +4,6 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: -1;
 
     .step-button {
         border-radius: 50%;
